--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -10,3 +10,4 @@
 .icon-logout:before { content: '\e808'; } /* '' */
 .icon-search:before { content: '\e809'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
