Added validation and other security improvement

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -9,5 +9,6 @@
 .icon-login:before { content: '\e807'; } /* '' */
 .icon-logout:before { content: '\e808'; } /* '' */
 .icon-search:before { content: '\e809'; } /* '' */
+.icon-user:before { content: '\e80a'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
