--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?18787948');
-  src: url('../font/fontello.eot?18787948#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?18787948') format('woff2'),
-       url('../font/fontello.woff?18787948') format('woff'),
-       url('../font/fontello.ttf?18787948') format('truetype'),
-       url('../font/fontello.svg?18787948#fontello') format('svg');
+  src: url('../font/fontello.eot?25723685');
+  src: url('../font/fontello.eot?25723685#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?25723685') format('woff2'),
+       url('../font/fontello.woff?25723685') format('woff'),
+       url('../font/fontello.ttf?25723685') format('truetype'),
+       url('../font/fontello.svg?25723685#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?18787948#fontello') format('svg');
+    src: url('../font/fontello.svg?25723685#fontello') format('svg');
   }
 }
 */
@@ -65,5 +65,6 @@
 .icon-login:before { content: '\e807'; } /* '' */
 .icon-logout:before { content: '\e808'; } /* '' */
 .icon-search:before { content: '\e809'; } /* '' */
+.icon-user:before { content: '\e80a'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
